Finally, server working good, adding some cooliness with ListView and quick actions for admin

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -104,5 +104,8 @@
   <ItemGroup>
     <None Include="Resources\serverIco.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Client.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
